--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Title</title>
 </head>
 <body>
-    <div class = 'header'>
-        <h1>СТРОЕНИЕ СОБАКИ</h1>
+  <div class = 'header'>
+        <h1>Chto-to</h1>
     </div>
     <div class = 'main'>
-        <img src="cat.jpg">
+        <button id="click">Press me</button>
     </div>
+    <script scr = "htt[s://telegram.org/js/telegram-web-app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
