--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class = 'main'>
         <button id="click">Press me</button>
     </div>
-    <script scr = "htt[s://telegram.org/js/telegram-web-app.js"></script>
+    <script scr = "https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
