--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
     <title>Title</title>
 </head>
 <body>
-  <div class = 'header'>
-        <h1>Chto-to</h1>
+    <div class = 'header'>
+        <h1>Traveling tickets</h1>
+        <p>Service for purchasing tickets</p>
     </div>
-    <div class = 'main'>
-        <button id="click">Press me</button>
+    <div class = 'inner'>
+        <div class = 'item'>
+            Moscow -> Sankt-Peterburg: 19$
+            <button class="btn" id="btn1">Purchase</button>
+        </div>
+        <div class = 'item'>
+            Rostov-On-Don -> Krasnodar: 12$
+            <button class="btn" id="btn2">Purchase</button>
+        </div>
+        <div class = 'item'>
+            Kislovodsk -> Krasnodar: 21$
+            <button class="btn" id="btn3">Purchase</button>
+        </div>
+        <div class = 'item'>
+            Volgograd -> Volgodonsk: 11$
+            <button class="btn" id="btn4">Purchase</button>
+        </div>
     </div>
+    <div class="footer">
+        <h1>Service info</h1>
+        <p>Support number: 123 345 678 910</p>
     <script src = "https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
 </body>
