--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         <p>Support number: 123 345 678 910</p>
     <script src = "https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
+    </div>
 </body>
 </html>
